--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # baseurl is the website's URL without the hostname
 
 # If you are building a simple GitHub user page (http://username.github.io) then use these settings:
-url: "http://username.github.io"
+url: "http://testroots.github.io/travistorrent-site"
 baseurl: ""
 
 # If you are building a GitHub project page then use these settings:
@@ -14,10 +14,10 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: My website
+title: TravisTorrent - Free and Open Travis Analytics for Everyone
 
 # Short description of your site
-description: A virtual proof that name is awesome!
+description: TravisTorrent is a GHTorrent partner project that aims to provide free and easy-to-use analytics of Travis CI builds
 
 # --- Navigation bar options --- #
 
@@ -36,7 +36,7 @@ navbar-links:
 # Change all these values or delete the ones you don't want.
 # Important: you must keep the "name" parameter, everything else you can remove
 author:
-  name: Some Person
+  name: The TestRoots Team
   email: "youremail@domain.com"
   facebook: yourname  # eg. daattali
   github: yourname    # eg. daattali
@@ -56,7 +56,7 @@ footer-links-active:
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "MyWebsite.com"  # eg. "deanattali.com/beautiful-jekyll"
+url-pretty: "travistorrent.testroots.org"  # eg. "deanattali.com/beautiful-jekyll"
 
 # --- Misc --- #
 
