--- a/_config.yml
+++ b/_config.yml
@@ -28,8 +28,8 @@ avatar: "/img/avatar-icon.png"
 # List of links in the navigation bar
 navbar-links:
   Home: ""
-  About Me: "aboutme"
-  Author's home: "http://deanattali.com"
+  Access TravisTorrent: "page_access"
+  Technical Details: "page_details"
   
 # --- Footer options --- #
 
@@ -37,19 +37,19 @@ navbar-links:
 # Important: you must keep the "name" parameter, everything else you can remove
 author:
   name: The TestRoots Team
-  email: "youremail@domain.com"
-  facebook: yourname  # eg. daattali
-  github: yourname    # eg. daattali
-  twitter: yourname   # eg. daattali
-  linkedin: yourlink  # eg. "pub/dean-attali/8/946/143"
+  email: "testroots-ÄT-testroots.org"
+  #facebook: yourname  # eg. daattali
+  github: TestRoots    # eg. daattali
+#  twitter: yourname   # eg. daattali
+#  linkedin: yourlink  # eg. "pub/dean-attali/8/946/143"
   stackoverflow: yourlink  # eg. "3943160/daattali"
  
 # Select which links to show in the footer
 footer-links-active:
   rss: false
-  facebook: true
+  facebook: false
   email: true
-  twitter: true
+  twitter: false
   github: true
   linkedin: false
   stackoverflow: false
