--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,7 @@ url-pretty: "travistorrent.testroots.org"  # eg. "deanattali.com/beautiful-jekyl
 disqus: "travistorrent"
 
 # Fill in your Google Analytics ID to track your website using GA
-#google_analytics: "UA-49032236-4"
+google_analytics: "UA-49032236-4"
 
 # --- Don't need to touch anything below here (but you can if you want) --- #
 
