Shorten permanent title

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: TravisTorrent - Free and Open Travis Analytics for Everyone
+title: TravisTorrent
 
 # Short description of your site
 description: TravisTorrent is a GHTorrent partner project that aims to provide free and easy-to-use analytics of Travis CI builds
