Fix mail address

--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ navbar-links:
 # Important: you must keep the "name" parameter, everything else you can remove
 author:
   name: The TestRoots Team
-  email: "testroots-ÄT-testroots.org"
+  email: "travistorrent-AT-testroots-DOT-org"
   #facebook: yourname  # eg. daattali
   github: TestRoots    # eg. daattali
 #  twitter: yourname   # eg. daattali
